--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,16 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="/stylesheets/style.css">
   <title>Movie</title>
-  <link rel='stylesheet' href='/stylesheets/main.css'>
 </head>
 <body>
-<header>
-  <h1> MOVIES  </h1>
-</header>
-  <nav>
-    <div><a href="/">Home</a></div>
-  </nav>
+  <header class="header-main">
+    <h1> <a href="/">MOVIES</a> </h1>
+  </header>
   <%= yield  %>
   <footer></footer>
 </body>
