--- a/views/movies.erb
+++ b/views/movies.erb
@@ -9,21 +9,21 @@
 <body>
     <div class="container">
         <div class="title">
-            <h2><%=@title%> <span class="year">(<%=@year%>)</span></h2>
+            <h2><%=@movie_data["Title"]%> <span class="year">(<%=@movie_data["Year"]%>)</span></h2>
         </div>
         
         <div class="subtitle">
-            <%=@rated%> | <%=@runtime%> | <%=@genre%>
+            <%=@movie_data["Rated"]%> | <%=@movie_data["Runtime"]%> | <%=@movie_data["Genre"]%>
         </div>
 
         <div>
-            <img src='<%=@poster%>'>
+            <img src='<%=@movie_data["Poster"]%>'>
         </div>
 
         <div>
-            <p><%= @plot %></p>
-            <h4>Director: <span><%=@director%></span></h4>
-            <h4>Staring: <span><%=@actors%></span></h4>
+            <p><%= @movie_data["Plot"] %></p>
+            <h4>Director: <span><%=@movie_data["Director"]%></span></h4>
+            <h4>Staring: <span><%=@movie_data["Actors"]%></span></h4>
         </div>
     </div>
 </body>
