--- a/views/search_results.erb
+++ b/views/search_results.erb
@@ -7,15 +7,19 @@
     <title>Document</title>
 </head>
 <body>
-    <h4>Results:</h4>
     <div class="results">
-        <% @search_results["Search"].each do |movie| %>
+        <% if @search_successful %>
+            <h4>Results for "<%=@title_query%>"</h4>
+            <% @search_results["Search"].each do |movie| %>
+                <%if movie["Type"] == "movie"%>
+                    <div>
+                        <a href="/movie?title=<%=movie["Title"]%>"><img src="<%=movie["Poster"]%>" alt=""></a>
+                    </div>
+                <%end%>
+            <% end %>
+        <% else %>
             <div>
-                <form>
-                    <a href="/movie" onclick="submit()"><img src="<%=movie["Poster"]%>" alt=""></a>
-                    <input type="hidden" name="title" value="Jaws">
-                </form>
-                
+                <h4>No results for "<%=@title_query%>"</h4>
             </div>
         <% end %>
     </div>
